Fixing spacing

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -28,6 +28,9 @@ body{ padding-top:50px; }
 #fullBody{
     height: 100%;
 }
+#FAQBody{
+    padding-top: 0px;
+}
 .fpLine{
     margin-bottom: 0;
 }
